Import of DAAN/XML-RPC-0.2 from CPAN.
gitpan-cpan-distribution: XML-RPC
gitpan-cpan-version:      0.2
gitpan-cpan-path:         DAAN/XML-RPC-0.2.tar.gz
gitpan-cpan-author:       DAAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 # XML::RPC Changes
 
+2007/04/25  (0.02)
+    * Fixed empty hashrefs on returning values
+    * Single result values are no longer returned as list.
+
 2007/03/01  (0.01)
     * first release.
 
