Import of DAAN/XML-RPC-0.5 from CPAN.
gitpan-cpan-distribution: XML-RPC
gitpan-cpan-version:      0.5
gitpan-cpan-path:         DAAN/XML-RPC-0.5.tar.gz
gitpan-cpan-author:       DAAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 # XML::RPC Changes
 
+2007/11/07  (0.5)
+    * No more strict refs.
+
 2007/10/12  (0.4)
     * Fixed some more ref tests.
     * String values are now always CDATA enclosed.
