Import of DAAN/XML-RPC-0.6 from CPAN.
gitpan-cpan-distribution: XML-RPC
gitpan-cpan-version:      0.6
gitpan-cpan-path:         DAAN/XML-RPC-0.6.tar.gz
gitpan-cpan-author:       DAAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 # XML::RPC Changes
 
+2008/02/07  (0.6)
+    * Added support for custom types.
+    * faultCode is forced as int.
+
 2007/11/07  (0.5)
     * No more strict refs.
 
