Import of DAAN/XML-RPC-0.7 from CPAN.
gitpan-cpan-distribution: XML-RPC
gitpan-cpan-version:      0.7
gitpan-cpan-path:         DAAN/XML-RPC-0.7.tar.gz
gitpan-cpan-author:       DAAN
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 # XML::RPC Changes
 
+2008/02/07  (0.7)
+    * Removed debugging warning.
+
 2008/02/07  (0.6)
     * Added support for custom types.
     * faultCode is forced as int.
